--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
     "manifest_version": 3,
-    "name": "Number Neutralizer",
+    "name": "Neutralizer - Remove Element",
     "version": "1.0.0",
     "description": "Description of your extension",
     "icons": {
-        "48": "icon48.png",
-        "128": "icon128.png"
+        "128": "icons/icon_128.png",
+		"48": "icons/icon_48.png",
+		"16": "icons/action_inactive.png"
+    },
+    "action": {
+        "default_icon": "icons/action_inactive.png"
     },
     "permissions": [
         "activeTab",
@@ -13,12 +17,6 @@
         "scripting",
         "contextMenus"
     ],
-    "action": {
-        "default_icon": {
-            "48": "icon48.png",
-            "128": "icon128.png"
-        }
-    },
     "commands": {
 		"_execute_action": {
 			"suggested_key": {
@@ -34,9 +32,17 @@
     },
     "content_scripts": [
         {
-            "matches": ["http://*/*", "https://*/*"],
-            "js": ["remove.js"]
+            "all_frames": false,
+            "matches": [ "*://*/*" ],
+            "js": [ "remove.js", "ctre_content.js" ],
+		    "run_at": "document_end"
         }
     ],
-    "host_permissions": ["http://*/*", "https://*/*"]
+	"host_permissions": [ "*://*/*" ],
+    "web_accessible_resources": [
+        {
+            "matches": [ "*://*/*" ],
+            "resources": [ "content.css" ]
+	    }
+    ]
 }
